@@ -1,5 +1,5 @@
 (function($) {
-    $('#calendar #month-select-form select').on('change', function() {
-        $('#calendar #month-select-form #form-buttons-apply').click();
+    $('#calendar #calendar-select-form select').on('change', function() {
+        $('#calendar #calendar-select-form #form-buttons-apply').click();
     });
 })(jQuery);
