@@ -7,6 +7,8 @@
 
 - Made selection of month for display two drop downs for month and year.
 
+- Added calendar view displaying a whole year.
+
 
 1.2.0 (2014-01-02)
 ==================
